<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

    <android.support.v7.widget.CardView
        android:layout_marginBottom="1dp"
        card_view:cardElevation="10dp"
        card_view:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="100dp">

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/input_national_id"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<EditText-->
                    <!--android:id="@+id/txt_national_id"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:maxLines="1"-->
                    <!--android:inputType="number"-->
                    <!--android:hint="@string/national_id" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'"
                    android:singleLine="true"
                    android:hint="@string/firstname" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'"
                    android:singleLine="true"
                    android:hint="@string/surname" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_othername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_othername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'"
                    android:singleLine="true"
                    android:hint="@string/othernames" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_businessname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_businessname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/business_name_hint" />
            </android.support.design.widget.TextInputLayout>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">



                <Spinner
                    android:id="@+id/spinner_countrycodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">
                </Spinner>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_phoneno"
                    android:layout_toRightOf="@+id/spinner_countrycodes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginLeft="5dp"
                        android:inputType="number"
                        android:layout_toRightOf="@+id/spinner_countrycodes"
                        android:hint="@string/phoneno2"
                        android:layout_marginTop="0dp"
                        android:drawableEnd="@mipmap/ic_call"/>

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>


            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/input_phoneno"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<EditText-->
                    <!--android:id="@+id/txt_phoneno"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:maxLines="1"-->
                    <!--android:hint="@string/phoneno"-->
                    <!--android:drawableRight="@mipmap/ic_call"/>-->
            <!--</android.support.design.widget.TextInputLayout>-->


            <LinearLayout
                android:padding="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtgender"
                    android:paddingTop="25dp"
                    android:text="@string/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                       />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/tv_association"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="0dp"
                    android:text="@string/association_membership"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_association"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="0dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_trader_next"
                    android:src="@mipmap/ic_next"
                    android:layout_marginTop="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"/>

            </RelativeLayout>







        </LinearLayout>

    </android.support.v7.widget.CardView>


</ScrollView>
