<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/viewAssoc_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="120px"
            android:layout_height="150px"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icons8_headquarters_100"/>

        <TextView
            android:id="@+id/tv_name"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/user_profile_photo"/>
        <TextView
            android:id="@+id/txt_name"
            android:layout_toRightOf="@+id/tv_name"
            android:textStyle="italic|bold"
            android:textSize="18sp"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="Association"/>


        <TextView
            android:id="@+id/tv_region"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regionview"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/txt_name"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/user_profile_photo"/>

        <TextView
            android:id="@+id/txt_region"
            android:layout_toRightOf="@+id/tv_region"
            android:textStyle="italic|bold"
            android:textSize="18sp"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="Region"
            android:layout_below="@+id/tv_name"
            android:layout_marginTop="20dp"/>


        <TextView
            android:id="@+id/tv_association"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/districtview"
            android:layout_toRightOf="@+id/user_profile_photo"
            android:layout_below="@+id/tv_region"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/txt_association"
            android:layout_toRightOf="@+id/tv_association"
            android:textStyle="italic|bold"
            android:textSize="18sp"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="District"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tv_region"/>

        <TextView
            android:id="@+id/tv_mobileno"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobileview"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/txt_association"
            android:layout_toRightOf="@+id/user_profile_photo"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txt_mobileno"
            android:layout_toRightOf="@+id/tv_mobileno"
            android:textStyle="italic|bold"
            android:textSize="18sp"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="22777831"
            android:layout_below="@id/txt_association"
            android:layout_marginTop="10dp"/>



        <Button
            android:id="@+id/moreinfo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_mobileno"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/more"
            android:clickable="false"
            android:textSize="12sp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorwhite"
            android:textStyle="bold"
            />


    </RelativeLayout>

</android.support.v7.widget.CardView>